TrackOrganizer: fix foolish behaviour on Windows wrt \ vs. / path separators

BUGFIXES:
 * Fixed organizing/copying/moving tracks to Local Collection on Windows.

BUG: 279560
BUG: 302251
FIXED-IN: 2.8
CCMAIL: Patrick von Reth <vonreth@kde.org>
DIGEST: Amarok fixes organizing/copying/moving tracks in Windows